# CivBot

./: .gitignore  DatabaseManagement.py  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  windows_dev_environment.cmd
game_code/: EmpireManagement.py  Map.py  blank_map.txt
views/: help.py
